Added more options to example + tooltip should return svg, size and insets

--- a/example/index.html
+++ b/example/index.html
@@ -5,44 +5,46 @@
     <title>Tooltip generator</title>
   </head>
   <body>
+    <h4>Tooltip</h4>
     <div>
-        <div>
-            Live generation <input type="checkbox" id="liveGeneration" checked="true">
+      <div>
+          Color <input type="text" id="color" value="white" onchange="recreateTooltip()">
+      </div>
+      <div>
+          Size 
+          <input type="number" id="width" min="0" step="1" value="300" placeholder="Width" onchange="recreateTooltip()">
+          <input type="number" id="height" min="0" step="1" value="300" placeholder="Height" onchange="recreateTooltip()">
+      </div>
+      <div>
+          Corners 
+          <input type="number" id="topLeftCorner" min="0" step="1" value="5" onchange="recreateTooltip()">
+          <input type="number" id="topRightCorner" min="0" step="1" value="5" onchange="recreateTooltip()">
+          <input type="number" id="bottomRightCorner" min="0" step="1" value="5" onchange="recreateTooltip()">
+          <input type="number" id="bottomLeftCorner" min="0" step="1" value="5" onchange="recreateTooltip()">
+      </div>
+      <div>
+        Shadow size <input type="number" id="shadow" min="0" step="1" value="20" placeholder="Shadow" onchange="recreateTooltip()">
+      </div>
+      <div>
+        <textarea id="text" style="width: 500px; height: 200px;" onchange="recreateTooltip()"></textarea>
+      </div>
+      <div>
+        <h4>Arrow</h4>
+        <input type="radio" name="arrow" checked="true" value="top" onchange="recreateTooltip()"> Top
+        <input type="radio" name="arrow" value="right" onchange="recreateTooltip()"> Right
+        <input type="radio" name="arrow" value="bottom" onchange="recreateTooltip()"> Bottom
+        <input type="radio" name="arrow" value="left" onchange="recreateTooltip()"> Left
+        <input type="radio" name="arrow" value="none" onchange="recreateTooltip()"> None
+      </div>
+      <div>
+        Offset <input type="number" id="arrowOffset" min="0" step="1" value="25" placeholder="Offset" onchange="recreateTooltip()">
+        Base <input type="number" id="arrowBase" min="0" step="1" value="40" placeholder="Shadow" onchange="recreateTooltip()">
+        Height <input type="number" id="arrowHeight" min="0" step="1" value="20" placeholder="Height" onchange="recreateTooltip()">
+      </div>
+      <div>
+        <div id="tooltip" style="overflow: hidden; box-sizing: border-box;">
+          <div id="tooltipContent" style="overflow: auto; width: 100%; height: 100%; padding: 20px; box-sizing: border-box;"></div>
         </div>
-      <div>
-          Color <input type="text" id="color" value="white" onchange="onSettingInputChange()">
-      </div>
-      <div>
-          Tooltip size
-          <br>
-          <input type="number" id="width" min="0" step="1" value="300" placeholder="Width" onchange="onSettingInputChange()">
-          <input type="number" id="height" min="0" step="1" value="300" placeholder="Height" onchange="onSettingInputChange()">
-      </div>
-      <div>
-          Corners
-          <br>
-          <input type="number" id="topLeftCorner" min="0" step="1" value="5" onchange="onSettingInputChange()">
-          <input type="number" id="topRightCorner" min="0" step="1" value="5" onchange="onSettingInputChange()">
-          <input type="number" id="bottomRightCorner" min="0" step="1" value="5" onchange="onSettingInputChange()">
-          <input type="number" id="bottomLeftCorner" min="0" step="1" value="5" onchange="onSettingInputChange()">
-      </div>
-      <div>
-        Shadow size <input type="number" id="shadow" min="0" step="1" value="20" placeholder="Shadow" onchange="onSettingInputChange()">
-      </div>
-      <div>
-        Arrow position
-        <br>
-        <input type="radio" name="arrow" checked="true" value="top" onchange="onSettingInputChange()"> Top
-        <input type="radio" name="arrow" value="right" onchange="onSettingInputChange()"> Right
-        <input type="radio" name="arrow" value="bottom" onchange="onSettingInputChange()"> Bottom
-        <input type="radio" name="arrow" value="left" onchange="onSettingInputChange()"> Left
-    </div>
-      <div>
-        <br>
-        <button onclick="recreateTooltip()">Generate</button>
-      </div>
-      <div>
-        <img id="svg">
       </div>
     </div>
     <script src="script.js"></script>
